<resources>
    <string name="app_name">My Application</string>
    <string name="facebook_app_id">3097323387035781</string>
    <string name="fb_login_protocol_scheme">fb3097323387035781</string>
    <!-- start screen -->
    <string name="app_name1">Share</string>
    <string name="app_name2">Caring</string>
    <string name="google_btn">Sign in with Google</string>
    <string name="fb_btn">Sign in with Facebook</string>
    <string name="sign_email">Sign in with email</string>
    <string name="account_exist">Already have an account?</string>
    <string name="log_in"><u>Log in</u></string>
    <string name="content">image content</string>
    <string name="options">OTHER OPTIONS</string>
    <!-- info activity -->
    <string name="information">info</string>
    <string name="got_it">Got it!</string>
    <string name="heading">heading</string>
    <!-- log in + register-->
    <string name="log_in_btn">Log in</string>
    <string name="register_btn">Register</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_pass">Password</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="welcome">Welcome Back</string>
    <string name="or">or</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="phone_with_country_code">Phone number</string>
    <!-- bottom nav menu -->
    <string name="item_map">Map</string>
    <string name="item_profile">Profile</string>
    <string name="item_notifications">Notifications</string>
    <string name="item_chat">Offers</string>


    <string name="toast_fb_firebase">Please sign in to continue</string>
    <string name="title_activity_maps">Map</string>

    <string name="log_out">LOG OUT</string>
    <string name="toast_auth">Authentication failed, the email is already registered with different provider</string>
    <string name="edit_prof">Edit profile</string>
    <string name="upload_profile_pic">Upload photo</string>
    <string name="finish_edit">Done</string>
    <string name="textview">TextView</string>
    <string name="volunteers">Volunteer</string>
    <string name="needs">Needs</string>
    <string name="my_offers">My Offers</string>
    <string name="walking_the_animals">Walking the animals</string>
    <string name="food_shopping">Food Shopping</string>
    <string name="medication">Medication</string>
    <string name="transport">Transport</string>
    <string name="i_m_down_for_anything">I\'m down for anything</string>
    <string name="volunteering">Do you want to be a volunteer?</string>
    <string name="description">What do you need?</string>
    <string name="address">Your address</string>
    <string name="add_new_offer">Add</string>
    <string name="in_what_help_areas_are_you_interested">In what help areas are you \ninterested?</string>
    <string name="name">Name</string>
    <string name="accepted_offers">ACCEPTED OFFERS</string>
    <string name="accepted">accepted</string>
    <string name="pending">pending</string>


</resources>