<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/closePopUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content"
        android:layout_marginTop="560dp"
        android:elevation="5dp"
        android:src="@drawable/ic_close"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="7dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="7dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/background"
        android:layout_marginTop="550dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/pop_up_edge">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">

                <Button
                    android:id="@+id/emailBtn"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button_colored"
                    android:drawableStart="@drawable/email_icon"
                    android:drawablePadding="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:text="@string/sign_email"
                    android:textColor="@color/background"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/email_icon"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|right"
                        android:text="@string/account_exist"
                        android:textColor="@color/colorMyGray"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/logInText"
                        android:background="?android:attr/selectableItemBackground"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/log_in"
                        android:textColor="@color/colorMyGray"
                        android:textSize="14sp"
                        android:layout_marginStart="5dp"
                        />
                </LinearLayout>



            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>