<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.sharecaring.activity.StartActivity">

    <ImageView
        android:id="@+id/imageMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:contentDescription="@string/content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357"
        app:srcCompat="@drawable/ic_start" />

    <ImageView
        android:id="@+id/imageSplash"
        android:layout_width="438dp"
        android:layout_height="392dp"
        android:layout_marginStart="310dp"
        android:layout_marginLeft="310dp"
        android:layout_marginBottom="375dp"
        android:contentDescription="@string/content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_start_splash" />


    <TextView
        android:id="@+id/textCaring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="casual"
        android:text="@string/app_name2"
        android:textColor="@color/colorMyRed"
        android:textSize="42sp"
        app:layout_constraintBottom_toTopOf="@+id/imageMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textShare"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="casual"
        android:text="@string/app_name1"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageMain"
        app:layout_constraintEnd_toStartOf="@+id/textCaring"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="95dp"
        android:layout_height="88dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/content"
        app:layout_constraintBottom_toTopOf="@+id/imageMain"
        app:layout_constraintEnd_toStartOf="@+id/textShare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <Button
        android:id="@+id/googleBtn"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:background="@drawable/rounded_button"
        android:drawableStart="@drawable/google_icon"
        android:drawableLeft="@drawable/google_icon"
        android:drawablePadding="5dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:text="@string/google_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageMain" />

    <Button
        android:id="@+id/fbBtn"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="91dp"
        android:layout_marginLeft="91dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:background="@drawable/rounded_button"
        android:drawableStart="@drawable/facebook_icon"
        android:drawableLeft="@drawable/facebook_icon"
        android:drawablePadding="5dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:text="@string/fb_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleBtn" />

    <Button
        android:id="@+id/optionsBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:layout_marginBottom="59dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fbBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginLeft="137dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="137dp"
        android:layout_marginRight="137dp"
        android:layout_marginBottom="59dp"
        android:text="@string/options"
        android:textColor="@color/colorMyRed"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fbBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>